Remove unnecessary suffix from template files

--- a/templates/env.html
+++ b/templates/env.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8" />
     <style>
         {% include 'table.css' %}
     </style>
 </head>
 <body>
-    {% include 'table_template.html' %}
+    {% include 'table.html' %}
 </body>
 </html>
