--- a/templates/table.html
+++ b/templates/table.html
@@ -1,20 +1,22 @@
-<table class="styled-table">
-    <thead>
-        <tr>
-            {% for header in headers %}
-            <th class="{{header['css_class']}}">{{ header['value'] }}</th>
+<div class="styled-table">
+    <table class="styled-table">
+        <thead>
+            <tr>
+                {% for header in headers %}
+                <th class="{{header['css_class']}}">{{ header['value'] }}</th>
+                {% endfor %}
+            </tr>
+        </thead>
+        <tbody>
+            {% for row in rows %}
+            <tr>
+                {% for field in row %}
+                <td class="{{field['css_class']}}">
+                    {{ field['value']|safe }}
+                </td>
+                {% endfor %}
+            </tr>
             {% endfor %}
-        </tr>
-    </thead>
-    <tbody>
-        {% for row in rows %}
-        <tr>
-            {% for field in row %}
-            <td class="{{field['css_class']}}">
-                {{ field['value']|safe }}
-            </td>
-            {% endfor %}
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+        </tbody>
+    </table>
+</div>
