--- a/templates/main.html
+++ b/templates/main.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <script src="https://cdn.plot.ly/plotly-2.14.0.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-{{ plotly_version }}.min.js"></script>
     <style>
         {% include "table.css" %}
     </style>
