Add titles to tables when grouped

--- a/templates/table.html
+++ b/templates/table.html
@@ -1,4 +1,7 @@
 <div class="styled-table">
+    {% if title %}
+    <h3>{{ title }}</h3>
+    {% endif %}
     <table class="styled-table">
         <thead>
             <tr>
