In run details use (hash of) env id and properties as runs primary key

--- a/templates/run.jinja
+++ b/templates/run.jinja
@@ -7,7 +7,7 @@
     </style>
 </head>
 <body>
-<h1>Run report for #{{run_id}}</h1>
+<h1>Run details</h1>
 {% for report in reports %}
     <h2>{{ report.title }}</h2>
     <p>{{ report.contents|safe }}</p>
